package org.example.proto.Domain;

public enum Status {
    GEPLAND,
    GEREGELD,
    BETAALD,
    NIET_UITVOERBAAR,
    UITGEVOERD
}

